# library_of_tabel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  config.example.py  pyproject.toml  wsgi.py
app/: __init__.py  auth.py  config.py  config_test.py  library.py  library_test.py  views.py
app/static/css/: app.css
app/static/js/: chordpro.js
app/templates/: base.html  index.html  login.html  tab.html
docs/: ROADMAP.md
scripts/: make_password_hash.py  make_samples.py  make_samples_test.py  vendor.lock.json  vendor_assets.py  vendor_assets_test.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_repo_hygiene.py
tests/integration/: __init__.py  auth_test.py  chordpro_render_test.py  conftest.py  views_test.py
