[project]
name = "library-of-tabel"
version = "0.1.0"
description = "Single-user guitar tab library: acquire, normalize, view."
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-login==0.6.3",
    "pyyaml==6.0.3",
]

# requires-python is a floor, not a pin. .python-version selects 3.13 for
# development; the floor stays at 3.11 so PythonAnywhere's older interpreters
# (3.11 / 3.12 / 3.13 are all offered) remain viable at deploy time.

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pre-commit==4.6.0",
    "ruff==0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
# Vendored third-party assets are never ours to reformat.
extend-exclude = ["app/static/vendor"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["app"]
