[project]
name = "library-of-tabel"
version = "0.1.0"
description = "Single-user guitar tab library: acquire, normalize, view."
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-login==0.6.3",
    "pyyaml==6.0.3",
]

# requires-python is a floor, not a pin. .python-version selects 3.13 for
# development; the floor stays at 3.11 so PythonAnywhere's older interpreters
# (3.11 / 3.12 / 3.13 are all offered) remain viable at deploy time.

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pre-commit==4.6.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "types-PyYAML==6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# Unit tests live beside the code they cover; they are not part of the app.
exclude = ["*_test.py"]

[tool.pytest.ini_options]
# Unit tests sit next to the module they cover (app/config.py -> app/config_test.py);
# anything that needs the app assembled lives under tests/. One suffix for both,
# so a file's name never has to encode which kind it is -- its location does.
python_files = ["*_test.py"]
testpaths = ["app", "scripts", "tests"]

# A warning we do not know about is a bug we have not read yet. The one standing
# exception is flask_login 0.6.3 calling the deprecated datetime.utcnow(); it is
# upstream's to fix, and it is pinned narrowly so that a *different* deprecation
# from the same module still fails the suite. Drop this line when they release.
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:flask_login.login_manager",
]

[tool.mypy]
python_version = "3.13"
# Type-check the bodies of unannotated functions too -- without this, mypy walks
# straight past any function lacking annotations, which is most of a young repo.
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# flask_login ships no py.typed and has no stub package on PyPI.
module = ["flask_login.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
# Vendored third-party assets are never ours to reformat.
extend-exclude = ["app/static/vendor"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# requires-python is >=3.11, where `dict | None` and `list[str]` already
# evaluate natively. Deferred annotations buy nothing here and cost clarity,
# so the import stays out rather than being cleaned up after the fact.
"__future__.annotations".msg = "unnecessary on 3.11+; write annotations directly"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["app"]
